question overview: limit fetch to 100 overflow text in field will be tooltip add edit button which redirect to admin backend change width of columns fix for mobile

--- a/frontend/static/css/base/_globals.scss
+++ b/frontend/static/css/base/_globals.scss
@@ -324,6 +324,11 @@ hr {
     }
 }
 
+.MuiPaper-elevation1 {
+    background: rgb(30, 14, 14) !important;
+    border: 1px solid rgb(66, 0, 0);
+}
+
 .MuiDialog-container,
 .MuiBackdrop-root :not(.MuiPopover-root) {
     backdrop-filter: blur(3px);
