--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -400,6 +400,11 @@ hr {
   width: 0;
 }
 
+.MuiPaper-elevation1 {
+  background: rgb(30, 14, 14) !important;
+  border: 1px solid rgb(66, 0, 0);
+}
+
 .MuiDialog-container,
 .MuiBackdrop-root :not(.MuiPopover-root) {
   -webkit-backdrop-filter: blur(3px);
